finish edit supply form

--- a/Restaurant/app/view/EditSupllyInfoPage.xaml
+++ b/Restaurant/app/view/EditSupllyInfoPage.xaml
@@ -28,12 +28,17 @@
                 <DatePicker FontSize="16" SelectedDate="{Binding Supply.SupplyDate}" Width="375" />
                 
                 <TextBlock Margin="10 5 10 0" Text="Стоимость (руб.):" Foreground="White"/>
-                <TextBox Margin="10 5 10 0" Text="{Binding Supply.PurchasePrice}" FontSize="15"  VerticalAlignment="Center"/>
+                <TextBox Margin="10 5 10 0" Text="{Binding Supply.PurchasePrice}" 
+                         FontSize="15" VerticalAlignment="Center"/>
 
                 
                 <StackPanel Grid.Row="8" Orientation="Horizontal" Margin="10 5" HorizontalAlignment="Center">
-                    <Button Margin="5" Content="Удалить" Command="{Binding DeleteEduDocumentCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>
-                    <Button Margin="5" Content="Сохранить" Command="{Binding SaveEduDocumentCommand}"/>
+                    <Button Margin="5" Content="Удалить" Command="{Binding DeleteSupplyCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>
+                    <Button Margin="5" Content="Сохранить" Command="{Binding SaveCommand}"/>
+                    <Button Width="30" Height="30" Margin="2 5" Command="{Binding PrintCommand, UpdateSourceTrigger=PropertyChanged}" 
+                        Padding="0,0,0,0" HorizontalAlignment="Right">
+                        <materialDesign:PackIcon Kind="Printer" Width="22" Height="22" />
+                    </Button>
                 </StackPanel>
             </StackPanel>
 
@@ -60,7 +65,7 @@
                 </StackPanel>
                 
                 <ScrollViewer Grid.Column="0" Margin="5" VerticalScrollBarVisibility="Auto">
-                    <ListBox Grid.Row="0" ItemsSource="{Binding DishesProducts}" Height="154" Width="375">
+                    <ListBox Grid.Row="0" ItemsSource="{Binding SuppliesProducts}" Height="154" Width="375">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="5" Orientation="Horizontal">
@@ -70,7 +75,7 @@
                                     </StackPanel>
                                     <StackPanel Margin="5 0">
                                         <TextBlock FontSize="10" Text="Количество" FontWeight="Bold"/>
-                                        <TextBlock FontSize="10" Text="{Binding Quantity}"/>
+                                        <TextBlock FontSize="10" Text="{Binding DeliveredQuantity}"/>
                                     </StackPanel>
                                     <StackPanel Margin="5 0">
                                         <TextBlock FontSize="10" Text="Единица измерения" FontWeight="Bold"/>
@@ -80,8 +85,8 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
-
                 </ScrollViewer>
+                
             </StackPanel>
         </Grid>
     </ScrollViewer>
