--- a/Restaurant/app/view/EditDishInfoPage.xaml
+++ b/Restaurant/app/view/EditDishInfoPage.xaml
@@ -31,10 +31,12 @@
                           IsEditable="True" ItemsSource="{Binding Statuses, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedStatus, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="StatusName"/>
 
                 <TextBlock Margin="10 5 10 0" Text="Стоимость (руб.):" Foreground="White"/>
-                <TextBox Margin="10 5 10 0" Text="{Binding Dish.DishCost}" FontSize="15"  VerticalAlignment="Center"/>
+                <TextBox Margin="10 5 10 0" Text="{Binding Dish.DishCost}" FontSize="15"  
+                         VerticalAlignment="Center"/>
 
                 <TextBlock Margin="10 5 10 0" Text="Вес порции (гр.):" Foreground="White"/>
-                <TextBox Margin="10 5 10 0" Text="{Binding Dish.OutputWeight}" FontSize="15"  VerticalAlignment="Center"/>
+                <TextBox Margin="10 5 10 0" Text="{Binding Dish.OutputWeight}" 
+                         FontSize="15"  VerticalAlignment="Center"/>
 
                 <StackPanel Grid.Row="8" Orientation="Horizontal" Margin="10 5" HorizontalAlignment="Center">
                     <!--<Button Margin="5" Content="Удалить" Command="{Binding DeleteCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>-->
