--- a/Restaurant/app/view/SuppliesPage.xaml
+++ b/Restaurant/app/view/SuppliesPage.xaml
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
-            <Button Width="32" Height="32" Margin="2 5" Command="{Binding AddNewDishCommand}" VerticalAlignment="Center" Padding="0,0,0,0">
+            <Button Width="32" Height="32" Margin="2 5" Command="{Binding AddNewSupplyCommand}" VerticalAlignment="Center" Padding="0,0,0,0">
                 <materialDesign:PackIcon Kind="Add" Width="24" Height="24" />
             </Button>
 
@@ -33,6 +33,9 @@
                     Command="{Binding OpenSupplierInfoCommand, UpdateSourceTrigger=PropertyChanged}" 
                     Padding="0,0,0,0">
                 
+            </Button>
+            <Button Width="32" Height="32" Margin="2 5" Command="{Binding PrintCommand, UpdateSourceTrigger=PropertyChanged}" Padding="0,0,0,0">
+                <materialDesign:PackIcon Kind="Printer" Width="24" Height="24" />
             </Button>
             <TextBlock TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18" Foreground ="White" Text="Поставки" Width="117"/>
         </StackPanel>
