--- a/Restaurant/app/view/EditOrderInfoPage.xaml
+++ b/Restaurant/app/view/EditOrderInfoPage.xaml
@@ -1,12 +1,13 @@
-﻿<Page x:Class="Restaurant.app.view.EditSupllyInfoPage"
+﻿<Page x:Class="Restaurant.app.view.EditOrderInfoPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="EditSupllyInfoPage">
+      Title="EditOrderInfoPage">
 
     <ScrollViewer Grid.Column="0" Margin="5" VerticalScrollBarVisibility="Auto">
         <Grid Background="Black">
@@ -17,23 +18,16 @@
 
             <StackPanel Orientation="Vertical" Grid.Column="0">
 
-                <TextBlock Margin="10 5 10 0" Text="Поставщик: " Foreground="White" VerticalAlignment="Center"/>
-                <ComboBox HorizontalAlignment="Stretch" Margin="10 0 10 5" FontSize="15" 
-                          materialDesign:HintAssist.Hint="Выберите поставщика" 
-                          IsEditable="True" ItemsSource="{Binding Suppliers, UpdateSourceTrigger=PropertyChanged}" 
-                          SelectedItem="{Binding SelectedSupplier, UpdateSourceTrigger=PropertyChanged}" 
-                          DisplayMemberPath="SupplierName"/>
-
                 <TextBlock Margin="10 5 10 0" Text="Дата: " Foreground="White" VerticalAlignment="Center"/>
-                <DatePicker FontSize="16" SelectedDate="{Binding Supply.SupplyDate}" Width="375" />
-                
+                <DatePicker FontSize="16" SelectedDate="{Binding Order.OrderDate}" Width="375" />
+
                 <TextBlock Margin="10 5 10 0" Text="Стоимость (руб.):" Foreground="White"/>
-                <TextBox Margin="10 5 10 0" Text="{Binding Supply.PurchasePrice}" 
+                <TextBox IsReadOnly="True" Margin="10 5 10 0" Text="{Binding Order.OrderCost}" 
                          FontSize="15" VerticalAlignment="Center"/>
 
-                
+
                 <StackPanel Grid.Row="8" Orientation="Horizontal" Margin="10 5" HorizontalAlignment="Center">
-                    <Button Name="Delete" Margin="5" Content="Удалить" Command="{Binding DeleteSupplyCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>
+                    <Button Name ="Delete" Margin="5" Content="Удалить" Command="{Binding DeleteOrderCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>
                     <Button Margin="5" Content="Сохранить" Command="{Binding SaveCommand}"/>
                     <Button Width="30" Height="30" Margin="2 5" Command="{Binding PrintCommand, UpdateSourceTrigger=PropertyChanged}" 
                         Padding="0,0,0,0" HorizontalAlignment="Right">
@@ -43,7 +37,7 @@
             </StackPanel>
 
             <StackPanel Orientation="Vertical" Grid.Column="1">
-                <TextBlock Margin="10 5 10 0" Text="Выбор ингредиентов" Foreground="White" TextAlignment="Center"/>
+                <TextBlock Margin="10 5 10 0" Text="Выбор блюд" Foreground="White" TextAlignment="Center"/>
 
                 <StackPanel Orientation="Horizontal" Width="385">
                     <Button Grid.Row="0" Command="{Binding AddDishCommand}" 
@@ -56,37 +50,38 @@
                         <materialDesign:PackIcon Kind="Delete" Width="24" Height="24" 
                                                 HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Button>
-                    <ComboBox Margin="10 0 10 5" Foreground="Black" FontSize="15" materialDesign:HintAssist.Hint="Поиск" IsEditable="True" 
-                              ItemsSource="{Binding Products, UpdateSourceTrigger=PropertyChanged}" 
-                              SelectedItem="{Binding SelectedProduct, UpdateSourceTrigger=PropertyChanged}" 
-                              DisplayMemberPath="ProductName" Width="198"/>
-                    <xctk:IntegerUpDown VerticalAlignment="Top" x:Name="productQuantity" Height="26"
+                    <ComboBox Margin="10 0 10 5" FontSize="15" materialDesign:HintAssist.Hint="Поиск" IsEditable="True" 
+                              ItemsSource="{Binding Dishes, UpdateSourceTrigger=PropertyChanged}" 
+                              SelectedItem="{Binding SelectedDish, UpdateSourceTrigger=PropertyChanged}" 
+                              DisplayMemberPath="DishName" Width="198"/>
+                    <xctk:IntegerUpDown VerticalAlignment="Top" x:Name="dishQuantity" Height="26"
                                          Value="{Binding SelectedQuantity, Mode=TwoWay}"/>
                 </StackPanel>
-                
+
                 <ScrollViewer Grid.Column="0" Margin="5" VerticalScrollBarVisibility="Auto">
-                    <ListBox Grid.Row="0" ItemsSource="{Binding SuppliesProducts}" Height="154" Width="375">
+                    <ListBox Grid.Row="0" ItemsSource="{Binding OrdersDishes}" Height="154" Width="375">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="5" Orientation="Horizontal">
                                     <StackPanel Margin="5 0">
                                         <TextBlock FontSize="10" Text="Название" FontWeight="Bold"/>
-                                        <TextBlock FontSize="10" Text="{Binding Product.ProductName}"/>
+                                        <TextBlock FontSize="10" Text="{Binding Dish.DishName}"/>
                                     </StackPanel>
                                     <StackPanel Margin="5 0">
                                         <TextBlock FontSize="10" Text="Количество" FontWeight="Bold"/>
-                                        <TextBlock FontSize="10" Text="{Binding DeliveredQuantity}"/>
+                                        <TextBlock FontSize="10" Text="{Binding Quantity}"/>
                                     </StackPanel>
                                     <StackPanel Margin="5 0">
-                                        <TextBlock FontSize="10" Text="Единица измерения" FontWeight="Bold"/>
-                                        <TextBlock FontSize="10" Text="{Binding Product.UnitOfMeasure.UnitsOfMeasureName}"/>
+                                        <TextBlock FontSize="10" Text="Цена" FontWeight="Bold"/>
+                                        <TextBlock FontSize="10" Text="{Binding Dish.DishCost}"/>
                                     </StackPanel>
+                                    
                                 </StackPanel>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
                 </ScrollViewer>
-                
+
             </StackPanel>
         </Grid>
     </ScrollViewer>
