--- a/Restaurant/app/view/App.xaml
+++ b/Restaurant/app/view/App.xaml
@@ -11,6 +11,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>-->
+            <BitmapImage x:Key="AppIcon" UriSource="..\Resources\icon-restaurant.png"/>
             <Style TargetType="TextBox">
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
                 <Setter Property="TextAlignment" Value="Left"/>
