--- a/Restaurant/app/view/EditRequestInfoPage.xaml
+++ b/Restaurant/app/view/EditRequestInfoPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Restaurant.app.view" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" xmlns:view_model="clr-namespace:Restaurant.app.view_model" xmlns:restaurant="clr-namespace:Restaurant" d:DataContext="{d:DesignInstance Type=restaurant:EditDishViewModel}"
+      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" xmlns:view_model="clr-namespace:Restaurant.app.view_model" xmlns:restaurant="clr-namespace:Restaurant" d:DataContext="{d:DesignInstance Type=view_model:EditRequestViewModel}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="EditRequestInfoPage">
@@ -22,10 +22,11 @@
                 <DatePicker FontSize="16" SelectedDate="{Binding Request.RequestDate}" Width="375" />
 
                 <TextBlock Margin="10 5 10 0" Text="Подразделение:" Foreground="White"/>
-                <ComboBox HorizontalAlignment="Stretch" Margin="10 0 10 5" FontSize="15" 
+                <ComboBox Foreground="Black" HorizontalAlignment="Stretch" Margin="10 0 10 5" FontSize="15" 
                           materialDesign:HintAssist.Hint="Выберите категорию продукта" IsEditable="True" 
                           ItemsSource="{Binding Departments, UpdateSourceTrigger=PropertyChanged}" 
-                          SelectedItem="{Binding SelectedDepartment, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="GroupName"/>
+                          SelectedItem="{Binding SelectedDepartment, UpdateSourceTrigger=PropertyChanged}" 
+                          DisplayMemberPath="DepartmentName"/>
 
 
 
