--- a/Restaurant/app/view/LogInView.xaml
+++ b/Restaurant/app/view/LogInView.xaml
@@ -8,7 +8,8 @@
         d:DataContext="{d:DesignInstance Type=viewmodels:LogInViewModel}"
         mc:Ignorable="d"
         Title="Авторизация" Height="350" Width="525"
-        ResizeMode="CanMinimize"
+		Icon="../Resources/icon-restaurant.png"
+        ResizeMode="CanMinimize"		
         WindowStartupLocation="CenterScreen">
         
     <Window.Resources>
