--- a/Restaurant/app/view/MainWindow.xaml
+++ b/Restaurant/app/view/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Restaurant.app.view" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Icon="..\Resources\icon-restaurant.png"
+        Icon="../Resources/icon-restaurant.png"
         Title="Ресторан Mamma Mia" Height="450" Width="800">
     <Grid Background="Black">
         <Grid.RowDefinitions>
