--- a/Restaurant/app/view/EditSupllyInfoPage.xaml
+++ b/Restaurant/app/view/EditSupllyInfoPage.xaml
@@ -35,7 +35,7 @@
                 <StackPanel Grid.Row="8" Orientation="Horizontal" Margin="10 5" HorizontalAlignment="Center">
                     <Button Name="Delete" Margin="5" Content="Удалить" Command="{Binding DeleteSupplyCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>
                     <Button Margin="5" Content="Сохранить" Command="{Binding SaveCommand}"/>
-                    <Button Width="30" Height="30" Margin="2 5" Command="{Binding PrintCommand, UpdateSourceTrigger=PropertyChanged}" 
+                    <Button Name="Print" Width="30" Height="30" Margin="2 5"  Command="{Binding PrintSupplyCommand, UpdateSourceTrigger=PropertyChanged}"  
                         Padding="0,0,0,0" HorizontalAlignment="Right">
                         <materialDesign:PackIcon Kind="Printer" Width="22" Height="22" />
                     </Button>
